operator/hack/addons.yaml
# This file is used to create additional objects to help development of the operator
# within a cluster. logcli pod helps write queries, promtail writes logs, etc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lokistack-dev-addons-logcli
  labels:
    app.kubernetes.io/name: logcli
    app.kubernetes.io/instance: developer-addons
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: logcli
      app.kubernetes.io/instance: developer-addons
  template:
    metadata:
      name: lokistack-dev-addons-logcli
      labels:
        app.kubernetes.io/name: logcli
        app.kubernetes.io/instance: developer-addons
    spec:
      containers:
        - name: logcli
          image: docker.io/grafana/logcli:2.4.1-amd64
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
          args:
            - -c
            - while true; do logcli query '{namespace="openshift-logging"}'; sleep 15; done
      serviceAccountName: lokistack-dev-addons-logcli
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: lokistack-dev-addons-promtail
  labels:
    app.kubernetes.io/name: promtail
    app.kubernetes.io/instance: developer-addons
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: promtail
      app.kubernetes.io/instance: developer-addons
  template:
    metadata:
      name: lokistack-dev-addons-promtail
      labels:
        app.kubernetes.io/name: promtail
        app.kubernetes.io/instance: developer-addons
    spec:
      containers:
        - name: promtail
          image: docker.io/grafana/promtail:2.4.1
          args:
            - -config.file=/etc/promtail/promtail.yaml
            - -log.level=info
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/promtail
              name: config
            - mountPath: /run/promtail
              name: run
            - mountPath: /var/lib/docker/containers
              name: docker
              readOnly: true
            - mountPath: /var/log/pods
              name: pods
              readOnly: true
            - mountPath: /var/log/journal
              name: journal
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      serviceAccountName: lokistack-dev-addons-promtail
      volumes:
        - configMap:
            defaultMode: 420
            name: lokistack-dev-addons-promtail
          name: config
        - emptyDir: {}
          name: run
        - emptyDir: {}
          name: docker
        - emptyDir: {}
          name: pods
        - emptyDir: {}
          name: journal
