operator/hack/addons_token_refresher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: token-refresher
    app.kubernetes.io/name: token-refresher
    app.kubernetes.io/version: master-2021-03-05-b34376b
  name: token-refresher
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: token-refresher
      app.kubernetes.io/name: token-refresher
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: token-refresher
        app.kubernetes.io/name: token-refresher
        app.kubernetes.io/version: master-2021-03-05-b34376b
    spec:
      containers:
      - args:
        - --log.level=debug
        - --log.format=logfmt
        - --web.listen=0.0.0.0:8080
        - --web.internal.listen=0.0.0.0:8081
        - --oidc.audience=$(OIDC_AUDIENCE)
        - --oidc.client-id=$(OIDC_CLIENT_ID)
        - --oidc.client-secret=$(OIDC_CLIENT_SECRET)
        - --oidc.issuer-url=$(OIDC_ISSUER_URL)
        - --url=https://lokistack-dev-gateway-http.default.svc:8080
        - --upstream.ca-file=/etc/certs/service-ca.crt
        image: quay.io/observatorium/token-refresher:master-2024-12-11-08b888a
        name: token-refresher
        ports:
        - containerPort: 8081
          name: internal
        - containerPort: 8080
          name: web
        volumeMounts:
        - mountPath: /etc/certs
          name: certificates
      volumes:
      - name: certificates
        configMap:
          name: lokistack-dev-gateway-ca-bundle
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: token-refresher
    app.kubernetes.io/name: token-refresher
    app.kubernetes.io/version: master-2021-03-05-b34376b
  name: token-refresher
spec:
  ports:
  - name: internal
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: token-refresher
    app.kubernetes.io/name: token-refresher
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: token-refresher-stripprefix@file
  labels:
    app.kubernetes.io/component: token-refresher
    app.kubernetes.io/instance: token-refresher
    app.kubernetes.io/name: token-refresher
  name: token-refresher
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: token-refresher
            port:
              name: web
        path: /token-refresher
        pathType: Prefix
